plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'io.mohajistudio'
version = '0.0.1-SNAPSHOT'
jar {
	enabled = false
}

test.onlyIf {
	!project.hasProperty('test')
}

java {
	sourceCompatibility = '17'
}

compileJava {
	options.compilerArgs += [
			'--enable-preview',
			'-Amapstruct.defaultComponentModel=spring'
	]
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web Application Server
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'

	// Google Login
	implementation 'com.google.api-client:google-api-client:2.3.0'
	implementation 'com.google.code.gson:gson:2.10.1'

	// Lombok
	testImplementation 'org.projectlombok:lombok:1.18.28'
    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Swagger(OpenApi)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	// Mapper
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// DataBase
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql:42.7.2'
	implementation 'org.hibernate:hibernate-spatial:6.4.1.Final'

	// Migration
	implementation 'org.flywaydb:flyway-core:10.4.1'
	implementation 'org.flywaydb:flyway-database-postgresql:10.4.1'

	// Firebase Admin
	implementation 'com.google.firebase:firebase-admin:9.2.0'

	// Authentication & Authorization
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// HTTP Client
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

	// AWS
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.0'
	implementation(platform("software.amazon.awssdk:bom:2.21.1"))
	implementation("software.amazon.awssdk:s3")

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}



compileTestJava {
	options.compilerArgs += [
			'--enable-preview',
			'-Amapstruct.defaultComponentModel=spring'
	]
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs([
			'--enable-preview',
			'-Amapstruct.defaultComponentModel=spring'
	])
}
